# fileraven

./: .gitignore  Modelfile  README.md  docker-compose.yml  pyproject.toml
.cromadb/: chroma.sqlite3
src/fileraven/backend/: Dockerfile  __init__.py  document_processor.py  embeddings.py  file_clerk.py  main.py  rag_engine.py  requirements.txt  settings.py  vector_store.py
src/fileraven/frontend/: Dockerfile  api_check.py  async_query_expander.py  download_dialog.py  query_explorer.py  requirements.txt  streamlit_app.py
