[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fileraven"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "A document Q&A system using RAG with Streamlit and FastAPI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "streamlit>=1.41.1",
    "python-multipart>=0.0.6",
    "sentence-transformers>=3.3.1",
    "chromadb>=0.5.23",
    "markitdown>=0.0.1a3",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[project.urls]
"Homepage" = "https://github.com/arminwitte/fileraven"
"Bug Tracker" = "https://github.com/arminwitte/fileraven/issues"

[project.scripts]
fileraven-api = "fileraven.backend.main:main"
fileraven-ui = "fileraven.frontend.streamlit_app:main"
